2000-05-16  Brent Welch <welch@scriptics.com>

	* modules/html/html.tcl: Added html::refresh to generate
	META tags that cause a page to refresh.

2000-04-26  Brent Welch <welch@scriptics.com>

	* html/html.tcl:  Added urlResove and urlParent URL parsing
	routines.

2000-04-26  Brent Welch <welch@scriptics.com>

	* html/html.tcl: track name changes in ncgi

2000-04-24  Brent Welch  <welch@scriptics.com>
	
	* html/html.tcl, html.test: Cleanup of procedure names in html package.
	* html/html.n:	Updates to the man page
	* htmlhtml.test: 60% through tests
