@@ -2,7 +2,7 @@
 '\" Copyright (c) 1998-2000 by Ajuba Solutions.
 '\" All rights reserved.
 '\" 
-'\" RCS: @(#) $Id: html.n,v 1.5 2000/05/31 00:00:00 ericm Exp $
+'\" RCS: @(#) $Id: html.n,v 1.6 2000/06/10 05:33:40 welch Exp $
 '\" 
 .so man.macros
 .TH html n 1.0 Html "HTML Generation"
@@ -62,6 +62,8 @@
 \fBhtml::hdrRow\fR \fIargs\fR
 .sp
 \fBhtml::head\fR \fItitle\fR
+.sp
+\fBhtml::headTag\fR \fIstring\fR
 .sp
 \fBhtml::keywords\fR \fIargs\fR
 .sp
@@ -268,6 +270,12 @@ of
 then additional tags are inserted into the HEAD section.
 This leaves an open HTML tag pushed on the stack with
 \fBopenTag\fP.
+
+.TP
+\fBhtml::headTag\fR \fIstring\fR
+Save a tag for inclusion in the HEAD section generated
+by \fBhtml::head\fR.  The \fIstring\fP is everything
+in the tag except the enclosing angle brackets, < >.
 
 .TP
 \fBhtml::keywords\fR \fIargs\fR
