@@ -10,7 +10,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: html.tcl,v 1.12 2000/05/31 00:00:00 ericm Exp $
+# RCS: @(#) $Id: html.tcl,v 1.13 2000/06/10 05:33:40 welch Exp $
 
 package provide html 1.0
 
@@ -169,6 +169,23 @@ proc html::refresh {content {url {}}} {
     }
     append html "\">\n"
     lappend page(meta) $html
+    return ""
+}
+
+# html::headTag
+#
+#	Embed a tag into the HEAD section
+#	generated by html::head
+#
+# Arguments:
+#	string	Everything but the < > for the tag.
+#
+# Side Effects:
+#	Stores HTML for the tag for use later by html::head
+
+proc html::headTag {string} {
+    variable page
+    lappend page(meta) <$string>
     return ""
 }
 
