@@ -1,3 +1,8 @@
+2000-06-04  Brent Welch <welch@scriptics.com>
+
+	* modules/html/html.tcl: Added html::headTag to add any tag
+	to the HEAD section generated by html::head.
+
 2000-05-16  Brent Welch <welch@scriptics.com>
 
 	* modules/html/html.tcl: Added html::refresh to generate
